[-] live open data API [-] HTTP-requests [-] SavedPreferences [-] Firebase should be used [-] Code should be organized well [-] Code should be documented well

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="searchHint">Search for a surfSpot</string>
     <string name="signed_in_fmt">User</string>
     <string name="signedInAs">You are signed in as:</string>
+    <string name="signedInmessage">You are signed in as </string>
     <string name="searchTitle">Search Spot</string>
     <string name="subtitleText">Results for </string>
     <string name="search">Search</string>
